--- a/style.css
+++ b/style.css
@@ -1,10 +1,20 @@
 html, body {
 	margin: 0;
 	padding: 0;
+	font-family: sans-serif;
+}
+
+@keyframes fadeInAnimation {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 0.5;
+	}
 }
 
 .head {
-	background-color: #DCD0EA;
+	background-color: white;
 }
 
 .head-content {
@@ -12,14 +22,159 @@ html, body {
 }
 
 .head-text {
-	font-family: sans-serif;
-	color: white;
-	font-size: 30px;
-	text-align: center; 
-	padding: 20px;
+	font-family: cursive;
+	color: #7D3C98;
+	font-size: 36px;
+	text-align: left; 
+	padding: 15px;
 }
 
-/* div {
-    display: block;
-    background-color: #D7BDE2;
-} */
+.banner-content {
+	height: 500px;
+	overflow: hidden;
+}
+
+.banner-img img {
+	width: 100%;
+	height: auto;
+	object-fit: cover;
+	opacity: 0.5;
+	animation: fadeInAnimation ease 3s;
+	animation-iteration-count: 1;
+	animation-fill-mode: forwards;
+}
+
+.banner-content button {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	background-color: #7D3C98;
+	color: white;
+	font-size: 24px;
+	padding: 12px 24px;
+	border: none;
+	cursor: pointer;
+	border-radius: 5px;
+}
+
+.banner-content h1 {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -350%);
+	color: white;
+	font-size: 42px;
+}
+
+.banner-content button:hover {
+	background-color: #DCD0EA;
+}
+
+.banner-login {
+	transform: translate(-150%, -100%);
+}
+
+.banner-signup {
+	transform: translate(50%, -100%);
+}
+
+.about-container {
+	padding: 150px;
+}
+
+.about-text {
+	width: 50%;
+	margin: auto;
+}
+
+.about-text h1 {
+	text-align: center;
+	font-size: 36px;
+	color: #7D3C98;
+}
+
+.about-text h2 {
+	background-color: #F6D7E8;
+	color: #F6D7E8;
+	width: 400px;
+	height: 7px;
+	font-size: 3px;
+	text-align: center;
+	margin: auto;
+}
+
+.about-text p {
+	font-size: 24px;
+	color: #7D3C98;
+	text-align: justify;
+	line-height: 2;
+}
+
+.about-features {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-evenly;
+	padding: 100px;
+}
+
+.about-single-feat {
+	order: 3;
+	padding: 40px;
+	border-radius: 5px;
+	background-color: #AA336A;
+	color: white;
+	font-size: 24px;
+}
+
+.about-single-feat:hover {
+	-webkit-transform: scale(1.2);
+	-ms-transform: scale(1.2);
+	transform: scale(1.2);
+	transition: 1s ease;
+}
+
+.nav {
+	background-color: #7D3C98;
+	position: sticky;
+	top: 0px;
+	margin: 0px;
+	overflow: hidden;
+}
+
+.footer {
+	background-color: #DCD0EA;
+	overflow: hidden;
+}
+
+.footer a {
+	color: #7D3C98;
+}
+
+.nav a {
+	color: #f2f2f2;
+}
+
+.nav a, .footer a {
+	text-decoration: none;
+	text-transform: uppercase;
+	overflow: hidden;
+	font: "Arial";
+	text-decoration: none;
+	font-size: 18px;
+	letter-spacing: 1px;
+	box-sizing: border-box;
+	float: left;
+	display: inline-block;
+	text-align: center;
+	padding: 16px 24px;
+}
+
+.nav a:hover {
+	background-color: #F2BFD7;
+	color: #7D3C98;
+}
+
+.footer a:hover {
+	background-color: #AA336A;
+	color: #F6EDEE;
+}
